Fix some parameters on the block

--- a/grc/rwt_sink.block.yml
+++ b/grc/rwt_sink.block.yml
@@ -12,15 +12,13 @@ parameters:
   - id: tx1_en
     label: TX1 Enable
     dtype: bool
-    default: 'True'
-    options: ['1', '0']
-    option_labels: ['True', 'False']
+    default: True
+    options: [True, False]
   - id: tx2_en
     label: TX2 Enable
     dtype: bool
-    default: 'False'
-    options: ['1', '0']
-    option_labels: ['True', 'False']
+    default: False
+    options: [True, False]
   - id: freq
     label: Frequency
     dtype: real
@@ -60,9 +58,8 @@ parameters:
     label: Filter auto
     category: Advanced RF
     dtype: bool
-    default: 'True'
-    options: ['1', '0']
-    option_labels: ['True', 'False']
+    default: True
+    options: [True, False]
     hide: part
   - id: extra
     label: Other Settings
@@ -86,16 +83,14 @@ parameters:
     label: Use Tags
     category: Advanced Device
     dtype: bool
-    default: 'True'
-    options: ['1', '0']
-    option_labels: ['True', 'False']
+    default: True
+    options: [True, False]
   - id: force_reload
     label: Force Reload
     category: Advanced Device
     dtype: bool
-    default: 'False'
-    options: ['1', '0']
-    option_labels: ['True', 'False']
+    default: False
+    options: [True, False]
     hide: part
   - id: buffer_size
     label: Buffer Size
