--- a/grc/rwt_source_s16.block.yml
+++ b/grc/rwt_source_s16.block.yml
@@ -259,7 +259,8 @@ templates:
         self.${id} = rwt.rwt_source_s16(
           pmt.to_pmt(rwt_cfg), ${rx1_en}, ${rx2_en},
           ${base_addr}, ${filter}, ${use_tags}, ${auto_filter},
-          ${force_reload}, ${buffer_size})
+          "default", ${force_reload}, ${buffer_size},
+          "ad9361-phy", "cf-ad9361-lpc", "cf-ad9361-dds-core-lpc")
 
   callbacks:
     - self.${id}.set_config("rx_freq", str(int(${freq})))
