Added support for a block that simply transmits a known sequence (32 bit counter) across the channel. This is used for making sure we don't drop data with a given type of transmission methodology

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -22,5 +22,6 @@ install(FILES
   rwt_sink.block.yml
   rwt_source.block.yml
   rwt_source_s16.block.yml
+  test_order_source.block.yml
   DESTINATION share/gnuradio/grc/blocks
 )
