cleaning up some grc typos and making sure the radio is left with low tx power at stop

--- a/grc/rwt_sink.block.yml
+++ b/grc/rwt_sink.block.yml
@@ -151,7 +151,8 @@ templates:
     - self.${id}.set_config("tx_freq", str(int(${freq})))
     - self.${id}.set_config("tx_bw", str(int(${bandwidth})))
     - self.${id}.set_config("samplerate", str(int(${samplerate})))
-    - self.${id}.set_config("tx_rfport1", "${rfport}")
+    - self.${id}.set_config("rx_rfport1", "${rfport1}")
+    - self.${id}.set_config("rx_rfport2", "${rfport2}")
     - self.${id}.set_config("escape", str(${escape}))
     - self.${id}.set_config("tx_gain1", str(-${attenuation1})
     - self.${id}.set_config("tx_gain2", str(-${attenuation2})
